<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="accept">Accept</string>
	<string name="action_add_bookmark">Add bookmark</string>
	<string name="action_add_favorite">Add to favorites</string>
	<string name="action_clear_bookmarks">Clear bookmarks</string>
	<string name="action_clear_favorites">Clear favorites</string>
	<string name="action_clear_history">Clear history</string>
	<string name="action_feedback">Send feedback</string>
	<string name="action_help">Help</string>
	<string name="action_remove_bookmark">Remove bookmark</string>
	<string name="action_remove_favorite">Remove from favorites</string>
	<string name="action_sound">Sound</string>
	<string name="action_viewonweb_tool">View on Website</string>
	<string name="apache_license">"
		Balochi Labz Balad
		&lt;/pre>"</string>
	<string name="app_name">Balochi Labz Balad</string>
	<string name="cancel">Cancel</string>
	<string name="clear_subdict_bookmarks_dialog_message">Are you sure you want to permanently clear your bookmarks list?</string>
	<string name="clear_wordbook_favorites_dialog_message">Are you sure you want to permanently clear your favorites list?</string>
	<string name="decline">Decline</string>
	<string name="dialog_no_network_connection">You must be connected to the Internet to use this feature.</string>
	<string name="feedback_email">astolastudio@gmail.com</string>
	<string name="feedback_intent_chooser">Send feedback via</string>
	<string name="feedback_subject">Balochi Labz Balad feedback</string>
	<string name="message_about">&lt;p> Balochi Labz Balad is written and prepared by Esaaq Khamush and is converted as an android app by Thaheer team, and re-alived by Astola Studio. &lt;/p></string>
	<string name="message_help">&lt;p> &lt;/p> Search a balochi word and find its meaning! &lt;/p></string>
	<string name="nav_drawer_heading_grammar">English to Balochi</string>
	<string name="nav_drawer_heading_wordbook">Balochi Labz Balad</string>
	<string name="nav_drawer_row_bookmarks">Bookmarks</string>
	<string name="nav_drawer_row_browse_grammar">Coming soon!</string>
	<string name="nav_drawer_row_browse_wordbook">Browse</string>
	<string name="nav_drawer_row_favorites">Favorites</string>
	<string name="nav_drawer_row_history">History</string>
	<string name="navigation_drawer_close">Close navigation drawer</string>
	<string name="navigation_drawer_open">Open navigation drawer</string>
	<string name="ok">OK</string>
	<string name="pref_about_key">PREF_ABOUT_KEY</string>
	<string name="pref_onePane">Hide word list</string>
	<string name="pref_onePane_key">PREF_ONE_PANE_KEY</string>
	<string name="pref_onePane_summary">Hide the left pane displaying the list of words in Browse mode</string>
	<string name="pref_textSize">Font size</string>
	<string name="pref_textSize_item_large">Large</string>
	<string name="pref_textSize_item_medium">Medium</string>
	<string name="pref_textSize_item_small">Small</string>
	<string name="pref_textSize_key">PREF_TEXT_SIZE_KEY</string>
	<string name="pref_typeface">Typeface</string>
	<string name="pref_typeface_default">@string/pref_typeface_roboto</string>
	<string name="pref_typeface_key">PREF_TYPEFACE_KEY</string>
	<string name="pref_typeface_notoSerif">Noto Serif</string>
	<string name="pref_typeface_roboto">Roboto</string>
	<string name="pref_viewonweb_tool">Hide \"View on Website\" option</string>
	<string name="pref_viewonweb_tool_key">PREF_VIEWONWEB_TOOL_KEY</string>
	<string name="search">Search</string>
	<string name="search_description">Labz Balad entries</string>
	<string name="search_hint">Search Labz Balad</string>
	<string name="settings">Settings</string>
	<string name="subdict_bookmarks_empty_view">Tap the Bookmark icon to save your favorite sections to this list.</string>
	<string name="subdict_footer">&lt;p>&lt;/p></string>
	<string name="subtitle_viewonweb_tool">Website Dictionary</string>
	<string name="title_about">About</string>
	<string name="title_activity_settings">Settings</string>
	<string name="title_help">Help</string>
	<string name="title_subdict">English to Balochi</string>
	<string name="title_subdict_bookmarks">Bookmarks</string>
	<string name="title_subdict_browse">Coming soon</string>
	<string name="title_wordbook">Balochi Labz Balad</string>
	<string name="title_wordbook_browse">Browse</string>
	<string name="title_wordbook_favorites">Favorites</string>
	<string name="title_wordbook_history">History</string>
	<string name="toast_bookmark_added">Bookmark added.</string>
	<string name="toast_bookmark_removed">Bookmark removed.</string>
	<string name="toast_clear_history">History cleared.</string>
	<string name="toast_clear_subdict_bookmarks">Bookmarks cleared.</string>
	<string name="toast_clear_wordbook_favorites">Favorites cleared.</string>
	<string name="toast_favorite_added">Favorite added.</string>
	<string name="toast_favorite_removed">Favorite removed.</string>
	<string name="toast_search_no_results">No results.</string>
	<string name="version">Version 1.0</string>
	<string name="webview_error">"Error: "</string>
	<string name="wordbook_favorites_empty_view">Tap the Add to Favorites icon to save your favorite words to this list.</string>
	<string name="wordbook_history_empty_view">Your history is empty.</string>
</resources>
