<?xml version="1.0" encoding="utf-8" ?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
	<item android:icon="@drawable/ic_sound" android:id="@+id/action_sound" android:title="@string/action_sound" app:showAsAction="always" />
	<item android:icon="@drawable/ic_favorite_outline_white_24dp" android:id="@+id/action_add_favorite" android:title="@string/action_add_favorite" app:showAsAction="ifRoom" />
	<item android:icon="@drawable/ic_favorite_white_24dp" android:id="@+id/action_remove_favorite" android:title="@string/action_remove_favorite" app:showAsAction="ifRoom" />
	<item android:icon="@drawable/ic_search_white_24dp" android:id="@+id/menu_search" android:title="@string/search" app:showAsAction="collapseActionView|ifRoom" app:actionViewClass="androidx.appcompat.widget.SearchView" />
	<item android:id="@+id/action_clear_favorites" android:menuCategory="secondary" android:orderInCategory="2" android:title="@string/action_clear_favorites" app:showAsAction="never" />
	<item android:id="@+id/action_clear_history" android:menuCategory="secondary" android:orderInCategory="3" android:title="@string/action_clear_history" app:showAsAction="never" />
	<item android:id="@+id/action_settings" android:menuCategory="secondary" android:orderInCategory="4" android:title="@string/settings" app:showAsAction="never" />
	<item android:id="@+id/action_help" android:menuCategory="secondary" android:orderInCategory="6" android:title="@string/action_help" app:showAsAction="never" />
</menu>
